Source/WebKit2/Shared/WebProcessCreationParameters.cpp
@@ -76,6 +76,9 @@ void WebProcessCreationParameters::encode(CoreIPC::ArgumentEncoder& encoder) con
 #if ENABLE(CUSTOM_PROTOCOLS)
     encoder << urlSchemesRegisteredForCustomProtocols;
 #endif
+#if USE(SOUP)
+    encoder << urlSchemesRegistered;
+#endif
     encoder.encodeEnum(cacheModel);
     encoder << shouldTrackVisitedLinks;
     encoder << shouldAlwaysUseComplexTextCodePath;
@@ -163,6 +166,10 @@ bool WebProcessCreationParameters::decode(CoreIPC::ArgumentDecoder* decoder, Web
         return false;
 #if ENABLE(CUSTOM_PROTOCOLS)
     if (!decoder->decode(parameters.urlSchemesRegisteredForCustomProtocols))
+        return false;
+#endif
+#if USE(SOUP)
+    if (!decoder->decode(parameters.urlSchemesRegistered))
         return false;
 #endif
     if (!decoder->decodeEnum(parameters.cacheModel))
